--- a/src/umr/static/styles/articles.css
+++ b/src/umr/static/styles/articles.css
@@ -3,7 +3,7 @@
   -webkit-tap-highlight-color: transparent;
 }
 
-.mdl-layout__content {
+.articlesMainContainer {
   background-color: #f2f2f2;
   overflow-y: overlay;
 }
@@ -208,7 +208,7 @@
   margin-left: 7.5%;
 }
 
-.mdl-chip__text {
+.orangeButtonText {
   max-width: 80%;
   color: #ffffff;
   white-space: nowrap;
@@ -217,7 +217,7 @@
   cursor: default;
 }
 
-.mdl-chip__text a {
+.orangeButtonText a {
   color: #ffffff !important;
 }
 
