--- a/src/umr/templates/articles.html
+++ b/src/umr/templates/articles.html
@@ -1,13 +1,13 @@
-{% include  "articleHeader.html" %}
+{% include "articleHeader.html" %}
 
 <body onload="sideBarLoad()" onresize="resizeShowOptions()">
   <div class="main-container" id="main-containerID">
-    {% include  "headerMenu.html" %}
-    {% include  "sideBar.html" %}
+    {% include "headerMenu.html" %}
+    {% include "sideBar.html" %}
 
     <div class="widthOfColumn">
-      <div class="mdl-layout__drawer">
-        <nav class="mdl-navigation">
+      <div class="searchExecuted">
+        <nav>
           <a id="searchIcon-LinkID" onclick="searchIconFunction()">
             <img class="searchIcon" src="{{ url_for('reader_blueprint.static',filename='images/SVGs/searchIcon.svg') }}"
               alt="search icon" />
@@ -15,58 +15,38 @@
           <div class="containerOptionsSorting">
             <div class="options" id="optionsID">
               <br /><br /><br />
-
               <div class="interestButton">
-                <span class="mdl-chip mdl-chip--deletable mdl-color--white mdl-color-text--amber tour">
-                  <button type="button" class="mdl-chip__action show-topic-subscriber">
-                    <span class="mdl-chip__text">Interests</span>
-                  </button>
-                </span>
+                <button type="button" class="orangeButton show-topic-subscriber">
+                  <span class="orangeButtonText">Interests</span>
+                </button>
               </div>
-
               <div id="searchesList"></div>
               <div id="topicsList">
-                <div id="any_topic" style="display:none;">
+                <div id="any_topic" style="display:block;">
                   &nbsp;&nbsp;&nbsp;&nbsp;<i style="color:gray">Showing all Interests...</i>
                 </div>
               </div>
-
               <div style="font-size: xx-small">&nbsp;</div>
               <div class="interestButton">
-                <span class="mdl-chip mdl-chip--deletable mdl-color--white mdl-color-text--amber tour">
-                  <button type="button" class="mdl-chip__action show-filter-subscriber">
-                    <span class="mdl-chip__text">
-                      <nobr>Non-Interests</nobr>
-                    </span>
-                  </button>
-                </span>
+                <button type="button" class="orangeButton show-filter-subscriber">
+                  <span class="orangeButtonText">
+                    <nobr>Non-Interests</nobr>
+                  </span>
+                </button>
               </div>
               <div id="searchesFilterList"></div>
               <div id="topicsFilterList"></div>
               <div style="font-size: xx-small">&nbsp;</div>
               <br />
               <div class="seachField">
-                <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
-                  <label class="mdl-button mdl-js-button mdl-button--icon" for="search-expandable">
-                  </label>
-                  <div class="mdl-textfield__expandable-holder">
-                    <input class="mdl-textfield__input" type="text" id="search-expandable"
-                      placeholder="Search all articles" />
-                  </div>
-                </div>
+                <input class="searchTextfieldInput" type="text" id="search-expandable"
+                  placeholder="Search all articles" />
               </div>
             </div>
             <div class="sortingCategories" id="sortingBox">
               <div class="sortContainer">
                 <p id="sortby"> Sort by:</p>
-                <div class="wordsSorting">
-                  <div class="wordLabel">words</div>
-                  <div id="triangleWords" class="triangle"></div>
-                </div>
-                <div class="levelSorting">
-                  <div class="levelLabel">level</div>
-                  <div id="triangleLevel" class="triangle"></div>
-                </div>
+                {% include  "sorting.html" %}
               </div>
             </div>
           </div>
@@ -90,8 +70,8 @@
       </div>
     </div>
     <div class="widthOfColumn">
-      <main class="mdl-layout__content">
-        <section class="mdl-layout__tab-panel is-active" id="inbox">
+      <main class="articlesMainContainer">
+        <section class="articleTab is-active" id="inbox">
           <div class="page-content">
             <ul id="searchNotification" class="searchNotification"></ul>
             <ul id="articleLinkList" class="articleLinkList"></ul>
@@ -114,10 +94,6 @@
             </div>
           </div>
         </section>
-        <section class="mdl-layout__tab-panel" id="starred">
-          <div class="page-content">
-            <ul id="starredArticleList" class="articleLinkList"></ul>
-        </section>
       </main>
     </div>
 
@@ -136,7 +112,7 @@
           <div class="articleLinkSummary">{% raw %}{{articleSummary}}{% endraw %}</div>
           <div class="articleTopics">
             <div class="articleLinkImage">
-              <img src="{% raw %}{{articleIcon}}{% endraw %}" class="feedIcon mdl-list__item-avatar"/>
+              <img src="{% raw %}{{articleIcon}}{% endraw %}" class="feedIcon"/>
             </div>
             <span class="publishingTime">({% raw %}{{articleLinkPublished}}{% endraw %})</span>
             {% raw %}{{#articleTopics}}{% endraw %}
@@ -162,13 +138,10 @@
 
     <!-- Template for custom interests and non-interests -->
     <script id="subscription-template-search" type="text/template">
-      <div searchRemovableID="{% raw %}{{ id }}{% endraw %}" class="mdl-list__item">
-        <span class="mdl-list__item-primary-content">
-        <a class="mdl-list__item-secondary-action topic">
+      <div searchRemovableID="{% raw %}{{ id }}{% endraw %}">
           <button type="button" class="interests custom">
             <span class="addableTitle">{% raw %}{{ search }}{% endraw %}</span>
           </button>
-        </a>
       </div>
     </script>
 
