--- a/src/umr/templates/classroom.html
+++ b/src/umr/templates/classroom.html
@@ -1,34 +1,22 @@
-{% include 'articleHeader.html' %}
+{% include "articleHeader.html" %}
 
 <body onload="sideBarLoad()">
   <div class="main-container" id="main-containerID">
-    {% include  "headerMenu.html" %}
-    {% include  "sideBar.html" %}
-
+    {% include "headerMenu.html" %}
+    {% include "sideBar.html" %}
     <div class="widthOfColumn">
-      <div class="mdl-layout__drawer">
-        <nav class="mdl-navigation">
-
-          <!-- Sorting buttons-->
-          <div class="sortingCategories">
-            <div class="wordsSorting">
-              <div class="wordLabel">words</div>
-              <div id="triangleWords" class="triangle"></div>
-            </div>
-            <div class="levelSorting">
-              <div class="levelLabel">level</div>
-              <div id="triangleLevel" class="triangle"></div>
-            </div>
-          </div>
-        </nav>
-      </div>
+      <nav>
+        <div class="sortingCategories">
+          {% include "sorting.html" %}
+        </div>
+      </nav>
     </div>
     <div class="widthOfColumn">
       <div class="tagsOfTopics"></div>
     </div>
     <div class="widthOfColumn">
-      <main class="mdl-layout__content">
-        <section class="mdl-layout__tab-panel is-active" id="inbox">
+      <main class="articlesMainContainer">
+        <section class="articleTab is-active" id="inbox">
           <div class="page-content">
             <!-- Search notification -->
             <ul id="searchNotification" class="searchNotification"></ul>
@@ -36,14 +24,14 @@
             <ul id="articleLinkList" class="articleLinkList"></ul>
             <br />
         </section>
-        <section class="mdl-layout__tab-panel" id="starred">
+        <section class="articleTab" id="starred">
           <div class="page-content">
             <ul id="starredArticleList" class="articleLinkList"></ul>
             <div id="emptyStarredArticleListImage" class="emptyPage">
             </div>
           </div>
         </section>
-        <section class="mdl-layout__tab-panel" id="cohort">
+        <section class="articleTab" id="cohort">
           <div class="page-content">
             <ul id="cohortArticleList" class="articleLinkList"></ul>
             <div id="emptyCohortArticleListImage" class="emptyPage">
