--- a/src/umr/static/scripts/newStyling/reader-header.css
+++ b/src/umr/static/scripts/newStyling/reader-header.css
@@ -8,10 +8,11 @@
 .select-article,
 h1 {
   padding-top: 0.3em;
+  margin-bottom: 0.3em;
   font-family: Montserrat;
   font-weight: 200;
-  font-size: 2.5em;
-  line-height: 1.5em;
+  font-size: 1.6em;
+  line-height: 1em;
   letter-spacing: 0.1em;
   display: flex;
   align-items: center;
@@ -47,15 +48,16 @@ p {
   justify-content: center;
 }
 
-.mdl-layout__tab {
+.headmenuTab {
   font-family: Montserrat;
-  font-size: 1rem;
-  line-height: 1.25rem;
+  font-size: 0.6em;
+  font-weight: 400;  
+  letter-spacing: 0;
 }
 
 .row__bar {
   margin: 0px;
-  padding: 2.5em;
+  padding: 1.5em;
 }
 
 .bar {
@@ -65,13 +67,13 @@ p {
   transform: rotate(-90deg);
 }
 
-.mdl-layout__tab,
+.headmenuTab,
 a {
   text-decoration: none;
   color: black;
 }
 
-.mdl-layout__tab:hover,
+.headmenuTab:hover,
 a:hover {
   color: #ffbb54;
 }
@@ -86,9 +88,10 @@ a:hover {
   }
 
   .select-article, h1{
-    font-size: 1.5em;
+    font-size: 1.2em;
     margin-top: 1em;
     margin-bottom: 0.5em;
+
   }
   
   .row__bar{
