--- a/src/umr/templates/headerMenu.html
+++ b/src/umr/templates/headerMenu.html
@@ -1,24 +1,23 @@
-<header class="mdl-layout__header mdl-layout__header--transparent">
-
-    <div class="mdl-layout__tab-bar mdl-js-ripple-effect" class="select-article">
-        <h1 class="select-article">Select an Article</h1>
+<header>
+    <div class="select-article">
+        <h1>Select an Article</h1>
         <div class="all__tabs">
             <div class="row__tab">
-                <a id="inbox_tab" href="/read" class="mdl-layout__tab">
+                <a id="inbox_tab" href="/read" class="headmenuTab">
                     Articles</a>
             </div>
             <div class="row__bar">
                 <div class="bar"></div>
             </div>
             <div class="row__tab">
-                <a id="starred_tab" href="/read/bookmarks" class="mdl-layout__tab">
+                <a id="starred_tab" href="/read/bookmarks" class="headmenuTab">
                     Bookmarks</a>
             </div>
             <div class="row__bar">
                 <div class="bar"></div>
             </div>
             <div class="row__tab">
-                <a id="cohort_tab" href="/read/classroom" class=" mdl-layout__tab">
+                <a id="cohort_tab" href="/read/classroom" class="headmenuTab">
                     Classroom</a>
             </div>
         </div>
