--- a/src/umr/templates/login.html
+++ b/src/umr/templates/login.html
@@ -10,7 +10,7 @@
 	<SCRIPT src="{{ url_for('reader_blueprint.static',filename='styles/mdl/material.min.js') }}"></SCRIPT>
 </HEAD>
 <DIV class="loginbox">
-	<H2>Hello.</H2>
+	<H2>You need to sign in to use Zeeguu!</H2>
 	<FORM method="post">
 		<DIV class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
 			<INPUT class="mdl-textfield__input" type="text" id="UserField" name="username">
