--- a/src/umr/templates/sideBar.html
+++ b/src/umr/templates/sideBar.html
@@ -6,11 +6,11 @@
   />
   <script
     type="text/javascript"
-    src="{{ url_for('reader_blueprint.static',filename='scripts/dist/Sidebar-0.9.353.js') }}"
+    src="{{ url_for('reader_blueprint.static',filename='scripts/dist/sidebar-0.9.353.js') }}"
   ></script>
   <script
     type="text/javascript"
-    src="{{ url_for('reader_blueprint.static',filename='scripts/dist/Settings-0.9.353.js') }}"
+    src="{{ url_for('reader_blueprint.static',filename='scripts/dist/settings-0.9.353.js') }}"
   ></script>
 </head>
 
