--- a/src/umr/templates/article.html
+++ b/src/umr/templates/article.html
@@ -39,10 +39,7 @@
     />
 
     <!-- Script -->
-    <script
-      type="text/javascript"
-      src="{{ url_for('reader_blueprint.static',filename='scripts/dist/mobileHelper-0.9.353.js') }}"
-    ></script>
+    <script type="text/javascript" src="/static/js/MobileHelpers.js"></script>
 
     <!-- Include the translation package. -->
     <link
