--- a/src/umr/templates/articleHeader.html
+++ b/src/umr/templates/articleHeader.html
@@ -82,10 +82,7 @@
       href="{{ url_for('reader_blueprint.static',filename='scripts/newStyling/loading.css') }}"
     />
 
-    <script
-      type="text/javascript"
-      src="{{ url_for('reader_blueprint.static',filename='scripts/dist/mobileHelpers-0.9.353.js') }}"
-    ></script>
+    <script type="text/javascript" src="/static/js/MobileHelpers.js"></script>
 
     <script src="{{ url_for('reader_blueprint.static',filename='scripts/dist/subscription-0.9.353.js') }}"></script>
     <script src="{{ url_for('reader_blueprint.static',filename='scripts/dist/translation-0.9.353.js') }}"></script>
