--- a/src/umr/templates/sideBar.html
+++ b/src/umr/templates/sideBar.html
@@ -4,14 +4,10 @@
     type="text/css"
     href="{{ url_for('reader_blueprint.static',filename='scripts/newStyling/side-bar.css') }}"
   />
-  <script
-    type="text/javascript"
-    src="{{ url_for('reader_blueprint.static',filename='scripts/dist/sidebar-0.9.353.js') }}"
-  ></script>
-  <script
-    type="text/javascript"
-    src="{{ url_for('reader_blueprint.static',filename='scripts/dist/settings-0.9.353.js') }}"
-  ></script>
+
+  <script type="text/javascript" src="/static/js/Sidebar.js"></script>
+
+  <script type="text/javascript" src="/static/js/Settings.js"></script>
 </head>
 
 <nav class="nav-menu">
