--- a/src/umr/static/scripts/newStyling/side-bar.css
+++ b/src/umr/static/scripts/newStyling/side-bar.css
@@ -81,7 +81,7 @@ nav {
 .generalLinks{
   font-family: Montserrat;
   font-style: normal;
-  font-weight: 400;
+  font-weight: 500;
   font-size: 1em;
   line-height: 1.25em;
   text-align: center;
@@ -95,6 +95,7 @@ nav {
   display: block;
   bottom: 25%;
   top: 16%;
+  z-index:3; 
 }
 
 .dropdown:hover {
@@ -201,6 +202,10 @@ content:'˄';
 
 #hidden {
   display: none;
+  flex-wrap:wrap; 
+  margin-bottom: 1em;
+  position: relative;
+  width: 100vw;
 }
 
 .hiddenSettingsBox {
@@ -216,13 +221,14 @@ content:'˄';
   margin-bottom: 0.5em;
   border-radius: 1em;
   text-align: center;
+  flex:25%; 
 }
 
 .hiddenText {
   line-height: 1.5em;
   color: #FFBB54;
   text-decoration: none;
-  font-weight: 300;
+  font-weight: 500;
 }
 
 .hiddenOption:hover  {
@@ -278,30 +284,6 @@ margin-block-end: 0;
   }
 
 
-
-  /*
-  .arrow-icon{
-    display: block !important;
-    color: white;
-    position: absolute;  
-  }
-
-  .arrow-none-block{
-    position: absolute;
-    top: 0em;
-    left: -1em;
-  }
-  
-.arrow-nav-icon {
-  display: block;
-  z-index: 32;
-  font-size: 4em;
-  line-height: unset;
-  position: fixed;
-  left: -0.2em;
-  top: 0em;
-} */
-
 .dropdown-content a{
   text-align: left;
 }
@@ -314,30 +296,24 @@ margin-block-end: 0;
   top:10%; 
 }
 
+#hidden{
+  margin-bottom:0em; 
+  height: 13vh;
 }
+
+.hiddenOption{
+  padding: 0.5em;
+}
+
+.hiddenText{
+
+
+}
+
+
 
 @media screen and (max-width: 450px){
   arrow-icon{
     left: -0.8em !important;
 }
 } 
-/*
-
-@media screen and (max-width: 700px) {
-  .sidenav {
-    width: 100%;
-    height: auto;
-    position: relative;
-  }
-  .sidenav .dropdown   {float: left;}
-  .main-container {margin-left: 0;}
-}
-
-@media screen and (max-width: 400px) {
-  .sidenav .dropdown {
-    text-align: center;
-    float: none;
-  }
-}
-
-*/
